<resources>
    <string name="app_name">About me</string>
    <string name="first_name">Gennadiy</string>
    <string name="last_name">Goihman</string>
    <string name="info">Enrollee</string>
    <string name="project_info">The main idea of the project is to implement an application to find like-minded people. The main audience of the developed solution are schoolchildren. With the help of this application they will be able to find project teams, in which the experience and knowledge of the guys will be useful. To do this, they will just need to specify brief information about themselves, the skills that users already have and the skills they want to acquire.</string>
    <string name="vr_dev">VR development</string>
    <string name="and_dev">Android development</string>
    <string name="ser_dev">Server development</string>
    <string name="three_d_mod">3D modeling</string>
    <string name="git_but" translatable="false">GitHub</string>
    <string name="pr_idea">Project Idea</string>
    <string name="skill_t">Skills</string>
    <string name="one_year">~1 year</string>
    <string name="two_years">>2 years</string>
    <string name="polt_year">less 1.5 year</string>
    <string name="text_filters">Filters</string>
    <string name="text_all">All</string>
    <string name="filter_button">Apply</string>


</resources>