<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    app:cardCornerRadius="20dp"
    android:backgroundTintMode="screen"
    android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/text_filters"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/all_check"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_all"
        android:checked="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/one_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_year"
        android:checked="true"
        app:layout_constraintStart_toStartOf="@+id/all_check"
        app:layout_constraintTop_toBottomOf="@+id/all_check" />

    <CheckBox
        android:id="@+id/two_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_years"
        android:checked="true"
        app:layout_constraintStart_toStartOf="@+id/one_check"
        app:layout_constraintTop_toBottomOf="@+id/one_check" />

    <CheckBox
        android:id="@+id/poltora_hceck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/polt_year"
        app:layout_constraintStart_toStartOf="@+id/two_check"
        app:layout_constraintTop_toBottomOf="@+id/two_check" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        app:cornerRadius="15dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/design_default_color_primary"
        app:strokeColor="@color/design_default_color_primary"
        app:strokeWidth="1dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poltora_hceck" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>